feature: copy to clipboard and download

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "clipboard-copy": "^4.0.1",
     "firebase": "^11.5.0",
     "html2canvas": "^1.4.1",
+    "lucide-react": "^0.485.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
